refactor: simplify collection of service points in UserService